--- a/stock-trading-simulator/templates/layout.html
+++ b/stock-trading-simulator/templates/layout.html
@@ -16,7 +16,7 @@
 
         <link href="/static/styles.css" rel="stylesheet">
 
-        <title>C$50 Finance: {% block title %}{% endblock %}</title>
+        <title>Stock Trading Simulator: {% block title %}{% endblock %}</title>
 
     </head>
 
@@ -24,7 +24,7 @@
 
         <nav class="bg-light border navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/"><span class="blue">C</span><span class="red">$</span><span class="yellow">5</span><span class="green">0</span> <span class="red">Finance</span></a>
+                <a class="navbar-brand" href="/"><span class="blue">Stock </span><span class="red">Trading </span><span class="green">Simulator</span></a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -70,7 +70,6 @@
             </form>
             <script>
                 document.addEventListener('DOMContentLoaded', function() {
-                    // Adapted from https://stackoverflow.com/a/10162353
                     const html = '<!DOCTYPE ' +
                     document.doctype.name +
                     (document.doctype.publicId ? ' PUBLIC "' + document.doctype.publicId + '"' : '') +
